# 2XKO-Notes

./: .gitignore  CHANGELOG.md  CODE_SIGNING_POLICY.md  LICENSE  PRIVACY.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml
_NO-SUBIR/: LEEME.md
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/public/remote/: announcements.json  app-manifest.json
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json  mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
apps/desktop/src-tauri/src/: distribution.rs  google_drive.rs  lib.rs  main.rs  portable_update.rs  storage_paths.rs
apps/desktop/src-tauri/windows/: installer-hooks.nsh  license.txt
apps/desktop/src/components/: AnnouncementBanner.tsx  AnnouncementFloat.tsx  AppHeader.tsx  (+41 more)
assets/manifest/: categories.json  characters.json
docs/: DOWNLOAD.md  EULA.md  PORTABLE_RELEASE.md
img/character/header/: README.txt
img/character/recut/: README.txt
img/home/: README.txt
remote/: announcements.json  app-manifest.json
scripts/: build-android-apk.ps1  build-portable.ps1  generate-android-icons.mjs  generate-character-thumbs.mjs  generate-latest-json.mjs  generate-latest-portable-json.mjs  generate-nsis-assets.mjs  kill-port-1420.cmd  publish-release.ps1  publish-updates-channel.mjs  sync-android-icons.mjs  sync-android-plugins.mjs  verify-sync-export.mjs  verify-updates-channel.mjs
updates-channel/: announcements.json  app-manifest.json  characters.json  latest-portable.json  latest.json
(+45 files in other folders)
